[gd_scene load_steps=3 format=3 uid="uid://bjyedkbmuknsa"]

[ext_resource type="Script" path="res://ui/city_preview.gd" id="1_36nj3"]

[sub_resource type="LabelSettings" id="LabelSettings_n8ivq"]
font_size = 60

[node name="CityPreview" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_36nj3")

[node name="AmountOfStructures" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.296
anchor_right = 0.368
anchor_bottom = 0.036
offset_left = -0.119995
offset_top = 3.0
offset_right = 0.039978
offset_bottom = 0.079998
text = "Structures: 0"

[node name="StructuresList" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 211.0
offset_top = 47.0
offset_right = 407.0
offset_bottom = 110.0

[node name="Label" type="Label" parent="StructuresList"]
layout_mode = 2
text = "Structure #1
"

[node name="AmountOfCharacters" type="Label" parent="."]
layout_mode = 2
anchor_right = 0.072
anchor_bottom = 0.032
offset_left = 6.0
offset_top = 1.0
offset_right = 6.16
offset_bottom = 0.959999
text = "0/0
"

[node name="CharactersList" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.069
anchor_right = 0.072
anchor_bottom = 0.139
offset_left = -2.0
offset_top = -0.680004
offset_right = 46.16
offset_bottom = -1.08001

[node name="Label" type="Label" parent="CharactersList"]
layout_mode = 2
text = "Character #1
"

[node name="CityName" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.454
anchor_top = 0.044
anchor_right = 0.556
anchor_bottom = 0.119
offset_left = 20.32
offset_top = 0.479996
offset_right = -0.520142
offset_bottom = 2.48
label_settings = SubResource("LabelSettings_n8ivq")

[node name="Size" type="Label" parent="."]
layout_mode = 2
anchor_left = 0.464
anchor_top = 0.125
anchor_right = 0.555
anchor_bottom = 0.202
offset_left = 0.119995
offset_right = 0.400024
offset_bottom = -0.160004
scale = Vector2(0.994152, 1.00445)
label_settings = SubResource("LabelSettings_n8ivq")

[node name="Upgrade" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.551
anchor_top = 0.932
anchor_right = 0.657
anchor_bottom = 0.99
offset_left = -0.920044
offset_top = 0.439941
offset_right = -0.440063
offset_bottom = -0.200073
theme_override_font_sizes/font_size = 20
text = "Upgrade"

[node name="BuildBaracks" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.552
anchor_top = 0.86
anchor_right = 0.666
anchor_bottom = 0.921
offset_left = 2.56
offset_top = -54.2
offset_right = 83.48
offset_bottom = -53.12
theme_override_font_sizes/font_size = 20
text = "Build Baracks
"

[node name="BuildLumberjackHut" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.552
anchor_top = 0.86
anchor_right = 0.666
anchor_bottom = 0.921
offset_left = 0.159912
offset_top = -0.799988
offset_right = -0.719971
offset_bottom = 0.319824
theme_override_font_sizes/font_size = 20
text = "Build Lumberjack Hut"

[node name="Recruit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.447
anchor_top = 0.93
anchor_right = 0.544
anchor_bottom = 0.992
offset_left = 0.759949
offset_top = -0.400085
offset_right = 0.519897
offset_bottom = -0.360107
theme_override_font_sizes/font_size = 20
text = "Recruit"

[connection signal="button_up" from="Upgrade" to="." method="_on_upgrade_button_button_up"]
[connection signal="button_up" from="BuildBaracks" to="." method="_on_build_baracks_button_up"]
[connection signal="button_up" from="BuildLumberjackHut" to="." method="_on_build_lumberjack_hut_button_button_up"]
[connection signal="button_up" from="Recruit" to="." method="_on_recruit_button_button_up"]
